fixing spacing issue in profile editor

--- a/style/theme/content.css
+++ b/style/theme/content.css
@@ -775,6 +775,7 @@
 }
 .phpbb fieldset dl {
 	padding: 4px 0;
+	clear: left;
 }
 .phpbb fieldset dt {
 	float: left;
